# parallelproof

./: .env.example  .gitignore  FULLSCREEN_UPDATE.md  LICENSE  PHASE4_COMPLETE.md  PHASE4_VALIDATION.md  README.md  healthcheck.py  main.py  pyproject.toml  start.bat  start.ps1  start.sh  test_api.sh  test_gemini.py  test_request.json
app/: config.py  main.py
app/agents/: __init__.py  optimizer.py  strategies.py
app/api/: __init__.py  optimization.py
app/core/: __init__.py  database.py
app/services/: __init__.py  fork_manager.py  gemini_service.py  hybrid_search.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
migrations/: 001_init_schema.sql
parallelproof.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
